raylib.jai


CameraMode :: enum {
    CAMERA_CUSTOM :: 0;
    CAMERA_FREE;
    CAMERA_ORBITAL;
    CAMERA_FIRST_PERSON;
    CAMERA_THIRD_PERSON;
}

CameraType :: enum {
    CAMERA_PERSPECTIVE :: 0;
    CAMERA_ORTHOGRAPHIC;
}

NPatchType :: enum {
    NPT_9PATCH :: 0;         // Npatch defined by 3x3 tiles
    NPT_3PATCH_VERTICAL;    // Npatch defined by 1x3 tiles
    NPT_3PATCH_HORIZONTAL;
}

rAudioBuffer :: struct { /* only used as a pointer in this header */ }

Quaternion :: Vector4;

Texture :: Texture2D;

TextureCubemap :: Texture2D;

RenderTexture :: RenderTexture2D;

Camera :: Camera3D;

Vector2 :: struct {
    x: float;
    y: float;
}

Vector3 :: struct {
    x: float;
    y: float;
    z: float;
}

Vector4 :: struct {
    x: float;
    y: float;
    z: float;
    w: float;
}

Matrix :: struct {
    m0, m4, m8, m12: float;
    m1, m5, m9, m13: float;
    m2, m6, m10, m14: float;
    m3, m7, m11, m15: float;
}

Color :: struct {
    r: u8;
    g: u8;
    b: u8;
    a: u8;
}

Rectangle :: struct {
    x: float;
    y: float;
    width: float;
    height: float;
}

Image :: struct {
    data: *void;
    width: s32;
    height: s32;
    mipmaps: s32;
    format: s32;
}

Texture2D :: struct {
    id: u32;
    width: s32;
    height: s32;
    mipmaps: s32;
    format: s32;
}

RenderTexture2D :: struct {
    id: u32;
    texture: Texture2D;
    depth: Texture2D;
    depthTexture: bool;
}

NPatchInfo :: struct {
    sourceRec: Rectangle;
    left: s32;
    top: s32;
    right: s32;
    bottom: s32;
    type: s32;
}

CharInfo :: struct {
    value: s32;
    offsetX: s32;
    offsetY: s32;
    advanceX: s32;
    image: Image;
}

Font :: struct {
    baseSize: s32;
    charsCount: s32;
    texture: Texture2D;
    recs: *Rectangle;
    chars: *CharInfo;
}

Camera3D :: struct {
    position: Vector3;
    target: Vector3;
    up: Vector3;
    fovy: float;
    type: CameraType;
}

Camera2D :: struct {
    offset: Vector2;
    target: Vector2;
    rotation: float;
    zoom: float;
}

Mesh :: struct {
    vertexCount: s32;
    triangleCount: s32;
    vertices: *float;
    texcoords: *float;
    texcoords2: *float;
    normals: *float;
    tangents: *float;
    colors: *u8;
    indices: *u16;
    animVertices: *float;
    animNormals: *float;
    boneIds: *s32;
    boneWeights: *float;
    vaoId: u32;
    vboId: *u32;
}

Shader :: struct {
    id: u32;
    locs: *s32;
}

MaterialMap :: struct {
    texture: Texture2D;
    color: Color;
    value: float;
}

Material :: struct {
    shader: Shader;
    maps: *MaterialMap;
    params: *float;
}

Transform :: struct {
    translation: Vector3;
    rotation: Quaternion;
    scale: Vector3;
}

BoneInfo :: struct {
    name: s8;
    parent: s32;
}

Model :: struct {
    transform: Matrix;
    meshCount: s32;
    meshes: *Mesh;
    materialCount: s32;
    materials: *Material;
    meshMaterial: *s32;
    boneCount: s32;
    bones: *BoneInfo;
    bindPose: *Transform;
}

ModelAnimation :: struct {
    boneCount: s32;
    bones: *BoneInfo;
    frameCount: s32;
    framePoses: **Transform;
}

Ray :: struct {
    position: Vector3;
    direction: Vector3;
}

RayHitInfo :: struct {
    hit: bool;
    distance: float;
    position: Vector3;
    normal: Vector3;
}

BoundingBox :: struct {
    min: Vector3;
    max: Vector3;
}

Wave :: struct {
    sampleCount: u32;
    sampleRate: u32;
    sampleSize: u32;
    channels: u32;
    data: *void;
}

AudioStream :: struct {
    sampleRate: u32;
    sampleSize: u32;
    channels: u32;
    buffer: *rAudioBuffer;
}

Sound :: struct {
    sampleCount: u32;
    stream: AudioStream;
}

Music :: struct {
    ctxType: s32;
    ctxData: *void;
    sampleCount: u32;
    loopCount: u32;
    stream: AudioStream;
}

VrDeviceInfo :: struct {
    hResolution: s32;
    vResolution: s32;
    hScreenSize: float;
    vScreenSize: float;
    vScreenCenter: float;
    eyeToScreenDistance: float;
    lensSeparationDistance: float;
    interpupillaryDistance: float;
    lensDistortionValues: float;
    chromaAbCorrection: float;
}
